--- a/src/main/webapp/dms2/finance.html
+++ b/src/main/webapp/dms2/finance.html
@@ -1,10 +1,182 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Fit Layout</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <link href="../demo.css" rel="stylesheet" type="text/css"/>
+
+
+    <script src="../../scripts/boot.js" type="text/javascript"></script>
+
+
 </head>
 <body>
- HELLO FINANCE
+<style type="text/css">
+    html, body {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+</style>
+<div class="mini-toolbar" style="padding:2px;border-bottom:0;">
+    <table style="width:100%;">
+        <tr>
+            <td style="width:100%;">
+                <input id="combo1" class="mini-combobox" style="width:150px;" textField="text" valueField="value"
+                       url="http://localhost:8080/ws/employee/v1/months"
+                       ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
+                       required="true" allowInput="true" showNullItem="false" onvaluechanged="onMonthChange"/>
+                <span class="separator"></span>
+                <!--<a class="mini-button" iconCls="icon-add" plain="true" onclick="addRow()">增加</a>-->
+                <!--<span class="separator"></span>-->
+                <a class="mini-button" iconCls="icon-save" plain="true" onclick="saveData()">保存</a>
+            </td>
+            <!--<td style="white-space:nowrap;"><label style="font-family:Verdana;">名称: </label>-->
+            <!--<input id="key" class="mini-textbox" emptyText="请输入姓名" style="width:150px;" onenter="onKeyEnter"/>-->
+            <!--<a class="mini-button" iconCls="icon-search" plain="true" onclick="onSearch()">查询</a>-->
+            <!--</td>-->
+        </tr>
+    </table>
+</div>
+
+<!--撑满页面-->
+<div class="mini-fit">
+
+    <div id="datagrid1" class="mini-datagrid" style="width:100%;height:100%;"
+         url="http://localhost:8080/ws/employee/v1/finances"
+         ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
+         idField="id" sizeList="[5,10,20,50]" pageSize="10" allowCellEdit="true" allowCellSelect="true"
+         multiSelect="true">
+        <div property="columns">
+            <div type="indexcolumn"></div>
+            <!--<div field="loginname" width="120" headerAlign="center" allowSort="true">员工帐号</div>-->
+            <div field="employeeName" width="120" headerAlign="center" allowSort="true">姓名
+                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>-->
+            </div>
+            <div field="attendance" width="120" type="comboboxcolumn" headerAlign="center" allowSort="false">考勤
+                <input property="editor" class="mini-combobox" style="width:150px;" textField="text" valueField="value"
+                       url="http://localhost:8080/ws/employee/v1/attendance" required="true" allowInput="true"/>
+            </div>
+            <div field="bonus" width="120" headerAlign="center" allowSort="true">提成
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="performanceAppraisal" width="120" headerAlign="center" allowSort="true">绩效
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="otherSubsidy" width="120" headerAlign="center" allowSort="true">其他补贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="charge" width="120" headerAlign="center" allowSort="true">扣款
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="chargeComments" width="120" headerAlign="center" allowSort="true">扣款说明
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="exhibitionCharge" width="120" headerAlign="center" allowSort="true">会展扣款
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="casualLeave" width="120" headerAlign="center" allowSort="true">事假
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="sickLeave" width="120" headerAlign="center" allowSort="true">病假
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="storageCharge" width="120" headerAlign="center" allowSort="true">保管
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="grossPay" width="120" headerAlign="center" allowSort="true">应发工资
+                <!--<input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>-->
+            </div>
+            <div field="medicalInsurance" width="120" headerAlign="center" allowSort="true">代扣社保
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="housingFund" width="120" headerAlign="center" allowSort="true">代扣公积金
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="beforeTaxSalary" width="120" headerAlign="center" allowSort="true">税前工资
+            </div>
+            <div field="personalIncomeTax" width="120" headerAlign="center" allowSort="true">个人所得税
+            </div>
+            <div field="afterTaxSalary" width="120" headerAlign="center" allowSort="true">应发工资
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<script type="text/javascript">
+
+    mini.parse();
+    var grid = mini.get("datagrid1");
+    grid.load();
+
+    var zeroize = function (value, length) {
+        if (!length) length = 2;
+        value = String(value);
+        for (var i = 0, zeros = ''; i < (length - value.length); i++) {
+            zeros += '0';
+        }
+        return zeros + value;
+    };
+
+    var now = new Date();
+    var year = String(now.getFullYear());
+    var month = zeroize(now.getMonth() + 1);
+    mini.get('combo1').setValue(year + month);
+
+
+    function onMonthChange() {
+        var value = mini.get('combo1').getValue();
+        alert(value);
+    }
+
+    function addRow() {
+        // var newRow = {name: "New Row"};
+        var newRow = {};
+        grid.addRow(newRow, 0);
+        grid.beginEditCell(newRow, "NAME");
+    }
+
+    function saveData() {
+        var finances = grid.getChanges();
+        var month = mini.get('combo1').getValue();
+        var data = {'finances': finances, 'month': month};
+        var json = mini.encode(data);
+        alert(json);
+        grid.loading("保存中，请稍后......");
+        $.ajax({
+            url: 'http://localhost:8080/ws/employee/v1/finances',
+            data: json,
+            type: 'post',
+            dataType: 'json',
+            contentType: 'application/json;charset=utf-8',
+            success: function (text) {
+                grid.reload();
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                alert(jqXHR);
+                alert(textStatus);
+                alert(errorThrown);
+                alert(jqXHR.responseText);
+            }
+        });
+    }
+
+    //    function onKeyEnter(e) {
+    //        onSearch();
+    //    }
+    //
+    //    function onSearch() {
+    //        var key = mini.get("key").getValue();
+    //        grid.load({key: key});
+    //    }
+
+</script>
+
 </body>
 </html>
