--- a/src/main/webapp/dms2/index.html
+++ b/src/main/webapp/dms2/index.html
@@ -10,57 +10,60 @@
     <script type="text/javascript" src="../js/jquery.easyui.min.js"></script>
 </head>
 <body class="easyui-layout">
+
 <div data-options="region:'north',border:false" style="height:60px;background:#DFFAEB;padding:10px">
     上海佳园
 </div>
-<div data-options="region:'west',split:true" style="width:150px;padding:1px;">
-    <div class="easyui-accordion" data-options="fit:true,border:false">
-        <div title="员工管理" style="width:150px;padding:1px;">
+
+<div data-options="region:'west',split:true" style="width:150px;padding:0px;">
+    <div class="easyui-accordion" data-options="fit:true">
+        <div title="员工管理" data-options="selected:true" style="width:150px;padding:0px;">
             <ul class="easyui-tree">
                 <li>
-                    <span>Foods</span>
-                    <ul>
-                        <li>
-                            <span>Fruits</span>
-                            <ul>
-                                <li>apple</li>
-                                <li>orange</li>
-                            </ul>
-                        </li>
-                        <li onclick="onClick">
-                            <span>Vegetables</span>
-                            <ul>
-                                <li>tomato</li>
-                                <li>carrot</li>
-                                <li>cabbage</li>
-                                <li>potato</li>
-                                <li>lettuce</li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <span><a href="javascript:void(0)" style="text-decoration: none"
+                             onclick="addTab('员工管理', 'employee.html')">员工管理</a></span>
                 </li>
             </ul>
         </div>
-        <div title="财务管理" data-options="selected:true" style="width:150px;padding:1px;">
+        <div title="财务管理" style="width:150px;padding:0px;">
             <ul class="easyui-tree">
                 <li>
-                    <span><a href="finance.html" target="main">财务管理</a></span>
+                    <span><a href="javascript:void(0)" style="text-decoration: none"
+                             onclick="addTab('财务管理', 'finance.html')">财务管理</a></span>
+                </li>
+            </ul>
+        </div>
+        <div title="工程佣金" style="width:150px;padding:0px;">
+            <ul class="easyui-tree">
+                <li>
+                    <span><a href="javascript:void(0)" style="text-decoration: none"
+                             onclick="addTab('工程佣金', 'projectCommision.html')">工程佣金</a></span>
                 </li>
             </ul>
         </div>
     </div>
 </div>
-<!--<div data-options="region:'east',split:true,collapsed:true,title:'East'" style="width:100px;padding:10px;">east region</div>-->
+<!--<div data-options=" region:'east',split:true,collapsed:true,title:'East'" style="width:100px;padding:10px;">east region
+        </div>
+        -->
 <div data-options="region:'south',border:false"
      style="height:50px;background:#DFFAEB;padding:10px;">
     Copyright © 上海
 </div>
-<!--<div data-options="region:'center',title:'Center'"></div>-->
-<div id="tt" class="easyui-tabs" data-options="region:'center',tools:'#tab-tools'"
-     style="width:700px;height:250px"/>
-</body>
 
-<script>
+<!--<div data-options="region:'center', title:'Center'">-->
+<!--</div>-->
+
+<div id="mainPanle" data-options="region:'center'">
+    <div id="tabs" class="easyui-tabs" data-options="fit:true">
+        <!--<div title="欢迎使用" style="padding: 20px; overflow: hidden;" id="home">-->
+        <!--<h1>Welcome to jQuery UI!</h1>-->
+        <!--</div>-->
+    </div>
+</div>
+
+
+<script type="text/javascript">
     $(function () {
         $(document).bind('contextmenu', function (e) {
             e.preventDefault();
@@ -70,6 +73,28 @@
             });
         });
     });
+
+    function addTab(subtitle, url) {
+        if (!$('#tabs').tabs('exists', subtitle)) {
+            $('#tabs').tabs('add', {
+                title: subtitle,
+                content: createFrame(url),
+                closable: true,
+//                width: $('#mainPanle').width() - 100,
+                height: $('#mainPanle').height() - 30
+            });
+        } else {
+            $('#tabs').tabs('select', subtitle);
+        }
+//        tabClose();
+    }
+
+    function createFrame(url) {
+        var s = '<iframe name="mainFrame" scrolling="auto" frameborder="0"  src="' + url + '" style="width:100%;height:100%;"></iframe>';
+        return s;
+    }
+
+
 </script>
 
 </html>
