--- a/src/main/webapp/dms2/employee.html
+++ b/src/main/webapp/dms2/employee.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" type="text/css" href="../css/demo.css">
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body class="easyui-layout">
 <!--<h2>Row Editing in DataGrid</h2>-->
 <!--<p>Click the row to start editing.</p>-->
-<table id="dg" class="easyui-datagrid"
+<table id="dg" class="easyui-datagrid" style="height: auto"
        data-options="
                 rownumbers: true,
 				iconCls: 'icon-edit',
@@ -29,20 +30,20 @@
     <thead>
     <tr>
         <th data-options="field:'name', width:100, align:'center', editor:'textbox'">员工姓名</th>
+        <th data-options="field:'hiredate', width:100, align:'center',
+                        editor:'datebox'">
+            入职日期
+        </th>
         <th data-options="field:'position', width:100, align:'center',
-						formatter:function(value,row){
-							return row.text;
-						},
 						editor:{
 							type:'combobox',
 							options:{
-								valueField:'value',
-								textField:'text',
-								method:'get',
-								url:'http://localhost:8080/ws/employee/v1/positions',
-								required:true
+							    valueField: 'text',
+							    textField: 'text',
+								url:'data/positions.json',
 							}
-						}">职位
+						}">
+            职位
         </th>
         <th data-options="field:'baseWage', width:100, align:'center', editor:'textbox'">
             基本工资
@@ -52,21 +53,24 @@
         <th data-options="field:'mealsSubsidy', width:100, align:'center', editor:'textbox'">
             饭补
         </th>
+        <th data-options="field:'bankCardNumber', width:100, align:'center', editor:'textbox'">
+            工资卡号
+        </th>
     </tr>
     </thead>
 </table>
 
 <div id="tb" style="height:auto">
     <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true"
-       onclick="append()">Append</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true"
-       onclick="removeit()">Remove</a>
+       onclick="add()">新增</a>
+    <!--<a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true"-->
+    <!--onclick="removeit()">Remove</a>-->
     <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-save',plain:true"
-       onclick="accept()">Accept</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:true"
-       onclick="reject()">Reject</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-search',plain:true"
-       onclick="getChanges()">GetChanges</a>
+       onclick="save()">保存</a>
+    <!--<a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:true"-->
+    <!--onclick="reject()">Reject</a>-->
+    <!--<a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-search',plain:true"-->
+    <!--onclick="getChanges()">GetChanges</a>-->
 </div>
 
 <script type="text/javascript">
@@ -95,7 +99,7 @@
     var editIndex = undefined;
     function endEditing() {
         if (editIndex == undefined) {
-            return true
+            return true;
         }
         if ($('#dg').datagrid('validateRow', editIndex)) {
             $('#dg').datagrid('endEdit', editIndex);
@@ -115,41 +119,36 @@
 
     ////////////////////////////////////////////////////
 
-    function append() {
+    function add() {
         if (endEditing()) {
-            $('#dg').datagrid('appendRow', {status: 'P'});
-            editIndex = $('#dg').datagrid('getRows').length - 1;
-            $('#dg').datagrid('selectRow', editIndex)
-                .datagrid('beginEdit', editIndex);
+            $('#dg').datagrid('appendRow', {});
+//            editIndex = $('#dg').datagrid('getRows').length - 1;
+//            $('#dg').datagrid('selectRow', editIndex)
+//                .datagrid('beginEdit', editIndex);
         }
     }
 
-    function removeit() {
-        if (editIndex == undefined) {
-            return
-        }
-        $('#dg').datagrid('cancelEdit', editIndex)
-            .datagrid('deleteRow', editIndex);
-        editIndex = undefined;
-    }
 
-    function accept() {
-        if (endEditing()) {
-            $('#dg').datagrid('acceptChanges');
-        }
-    }
-
-    function reject() {
-        $('#dg').datagrid('rejectChanges');
-        editIndex = undefined;
-    }
-
-    function getChanges() {
+    function save() {
         var rows = $('#dg').datagrid('getChanges');
-        alert(rows);
         var data = JSON.stringify(rows);
         alert(data);
-        alert(rows.length + ' rows are changed!');
+        $.ajax({
+            url: "http://localhost:8080/ws/employee/v1/employees",
+            data: data,
+            type: 'post',
+            dataType: 'json',
+            contentType: "application/json;charset=utf-8",
+            success: function (text) {
+                $('#dg').datagrid('reload');
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                alert(jqXHR);
+                alert(textStatus);
+                alert(errorThrown);
+                alert(jqXHR.responseText);
+            }
+        });
     }
 
 </script>
