--- a/src/main/webapp/dms2/index.html
+++ b/src/main/webapp/dms2/index.html
@@ -11,11 +11,11 @@
 </head>
 <body class="easyui-layout">
 
-<div data-options="region:'north',border:false" style="height:60px;background:#DFFAEB;padding:10px">
+<div data-options="region:'north',border:false" style="height:60px;background:#DFFAEB;">
     上海佳园
 </div>
 
-<div data-options="region:'west',split:true" style="width:150px;padding:0px;">
+<div data-options="region:'west',split:true" style="width:150px;overflow: hidden;">
     <div class="easyui-accordion" data-options="fit:true">
         <div title="员工管理" data-options="selected:true" style="width:150px;padding:0px;">
             <ul class="easyui-tree">
@@ -43,54 +43,49 @@
         </div>
     </div>
 </div>
-<!--<div data-options=" region:'east',split:true,collapsed:true,title:'East'" style="width:100px;padding:10px;">east region
-        </div>
-        -->
-<div data-options="region:'south',border:false"
-     style="height:50px;background:#DFFAEB;padding:10px;">
-    Copyright © 上海
-</div>
 
-<!--<div data-options="region:'center', title:'Center'">-->
+<!--
+<div data-options=" region:'east',split:true,collapsed:true,title:'East'" style="width:100px;padding:10px;">east region
+</div>
+-->
+
+<!--<div data-options="region:'south',border:false"-->
+<!--style="height:50px;background:#DFFAEB;padding:10px;">-->
+<!--Copyright © 上海-->
 <!--</div>-->
 
-<div id="mainPanle" data-options="region:'center'">
+<!--<div data-options="region:'center'" style="overflow: hidden;">-->
+<!--<iframe name="mainFrame" frameborder="0"-->
+<!--style="width:100%;height:100%;" border="0"></iframe>-->
+<!--</div>-->
+
+<div data-options="region:'center'" style="overflow: hidden;">
     <div id="tabs" class="easyui-tabs" data-options="fit:true">
-        <!--<div title="欢迎使用" style="padding: 20px; overflow: hidden;" id="home">-->
-        <!--<h1>Welcome to jQuery UI!</h1>-->
-        <!--</div>-->
+        <div title="欢迎使用" style="padding: 20px; overflow: hidden;" id="home">
+            <h1>Welcome DMS!</h1>
+        </div>
     </div>
 </div>
 
 
 <script type="text/javascript">
-    $(function () {
-        $(document).bind('contextmenu', function (e) {
-            e.preventDefault();
-            $('#mm').menu('show', {
-                left: e.pageX,
-                top: e.pageY
-            });
-        });
-    });
 
     function addTab(subtitle, url) {
         if (!$('#tabs').tabs('exists', subtitle)) {
             $('#tabs').tabs('add', {
                 title: subtitle,
                 content: createFrame(url),
-                closable: true,
-//                width: $('#mainPanle').width() - 100,
-                height: $('#mainPanle').height() - 30
+                closable: true
             });
         } else {
             $('#tabs').tabs('select', subtitle);
         }
-//        tabClose();
+        //        tabClose();
     }
 
     function createFrame(url) {
-        var s = '<iframe name="mainFrame" scrolling="auto" frameborder="0"  src="' + url + '" style="width:100%;height:100%;"></iframe>';
+        var s = '<div style="overflow:hidden;width:100%;height:100%;"><iframe scrolling="auto" frameborder="0"  src="' + url + '" style="width:100%;height:100%;"></iframe></div>';
+//        var s = '<iframe scrolling="auto" frameborder="0"  src="' + url + '" style="width:100%;height:100%;"></iframe>';
         return s;
     }
 
