add validation in employee module

--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -60,37 +60,37 @@
                        ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
                        required="true" allowInput="true" showNullItem="false"/>
             </div>
-            <div field="baseWage" width="100" allowSort="true" headerAlign="center">基本工资
+            <div field="baseWage" width="100" allowSort="true" headerAlign="center" vtype="float"> 基本工资
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="workingAgeSubsidy" width="100" headerAlign="center" allowSort="true">工龄
+            <div field="workingAgeSubsidy" width="100" headerAlign="center" allowSort="true" vtype="int">工龄
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="overtime" width="100" headerAlign="center" allowSort="false">加班
+            <div field="overtime" width="100" headerAlign="center" allowSort="false" vtype="float">加班
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="mealsSubsidy" width="100" headerAlign="center" allowSort="false">饭贴
+            <div field="mealsSubsidy" width="100" headerAlign="center" allowSort="false" vtype="float">饭贴
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="secrecySubsidy" width="100" headerAlign="center" allowSort="false">保密
+            <div field="secrecySubsidy" width="100" headerAlign="center" allowSort="false" vtype="float">保密
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="communicationFee" width="100" headerAlign="center" allowSort="false">通讯费
+            <div field="communicationFee" width="100" headerAlign="center" allowSort="false" vtype="float">通讯费
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="jywCommissionRatio" width="100" headerAlign="center" allowSort="false">佳园屋提成比例
+            <div field="jywCommissionRatio" width="100" headerAlign="center" allowSort="false" vtype="float">佳园屋提成比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="commencementRatio" width="100" headerAlign="center" allowSort="false">开工比例
+            <div field="commencementRatio" width="100" headerAlign="center" allowSort="false" vtype="float">开工比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="completionRatio" width="100" headerAlign="center" allowSort="false">竣工比例
+            <div field="completionRatio" width="100" headerAlign="center" allowSort="false" vtype="float">竣工比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="renovateCommossionRatio" width="100" headerAlign="center" allowSort="false">翻新提成比例
+            <div field="renovateCommossionRatio" width="100" headerAlign="center" allowSort="false" vtype="float">翻新提成比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center">卡号
+            <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center" vtype="float">卡号
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
         </div>
@@ -106,13 +106,21 @@
 
 
     function addRow() {
-        // var newRow = {name: "New Row"};
         var newRow = {};
         grid.addRow(newRow, 0);
         grid.beginEditCell(newRow, "NAME");
     }
 
     function saveData() {
+
+        grid.validate();
+        if (grid.isValid() == false) {
+            alert("请校验输入单元格内容");
+            var error = grid.getCellErrors()[0];
+            grid.beginEditCell(error.record, error.column);
+            return;
+        }
+
         var data = grid.getChanges();
         var json = mini.encode(data);
         alert(json);
@@ -143,6 +151,7 @@
         var key = mini.get("key").getValue();
         grid.load({key: key});
     }
+
 
 </script>
 
