--- a/src/main/webapp/dms/index.html
+++ b/src/main/webapp/dms/index.html
@@ -118,7 +118,7 @@
             <!--<li><a href="overview.html" target="main">Overview</a></li>-->
             <li><a href="employee.html" target="main">员工管理</a></li>
             <li><a href="finance.html" target="main">财务管理</a></li>
-            <li><a href="projectCommision.html" target="main">工程佣金</a></li>
+            <li><a href="projectCommission.html" target="main">工程佣金</a></li>
             <!--<li>-->
             <!--<span expanded="true">快速入门</span>-->
             <!--<ul>-->
