--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -46,7 +46,7 @@
 <div class="mini-fit">
 
     <div id="datagrid1" class="mini-datagrid" style="width:100%;height:100%;"
-         url="http://localhost:8080/ws/commision/v1/projectCommisions"
+         url="http://localhost:8080/ws/commission/v1/projectCommissions"
          ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
          idField="id" sizeList="[5,10,20,50]" pageSize="10" allowCellEdit="true" allowCellSelect="true"
          multiSelect="true" showFilterRow="true">
@@ -86,14 +86,14 @@
             <div field="contractState" width="100" headerAlign="center" allowSort="false">contractState
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="commisionState" width="100" headerAlign="center" allowSort="false">commisionState
+            <div field="CommissionState" width="100" headerAlign="center" allowSort="false">CommissionState
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designCommisionRate" width="100" headerAlign="center" allowSort="false">designCommisionRate
+            <div field="designCommissionRate" width="100" headerAlign="center" allowSort="false">designCommissionRate
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designerAssistantCommisionRate" width="100" headerAlign="center" allowSort="false">
-                designerAssistantCommisionRate
+            <div field="designerAssistantCommissionRate" width="100" headerAlign="center" allowSort="false">
+                designerAssistantCommissionRate
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="actualStartTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
@@ -108,25 +108,25 @@
                 contractDate
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="firstCommision" width="100" headerAlign="center" allowSort="false">
-                firstCommision
+            <div field="firstCommission" width="100" headerAlign="center" allowSort="false">
+                firstCommission
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="firstCommisionDate" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
-                firstCommisionDate
+            <div field="firstCommissionDate" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+                firstCommissionDate
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <div field="balanceTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 balanceTime
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="balanceCommision" width="100" headerAlign="center" allowSort="false">
-                balanceCommision
+            <div field="balanceCommission" width="100" headerAlign="center" allowSort="false">
+                balanceCommission
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="balanceCommisionDate" width="100" headerAlign="center" allowSort="false"
+            <div field="balanceCommissionDate" width="100" headerAlign="center" allowSort="false"
                  dateFormat="yyyy-MM-dd">
-                balanceCommisionDate
+                balanceCommissionDate
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
 
@@ -147,7 +147,7 @@
         alert(json);
         grid.loading("保存中，请稍后......");
         $.ajax({
-            url: 'http://localhost:8080/ws/commision/v1/projectCommisions',
+            url: 'http://localhost:8080/ws/commission/v1/projectCommissions',
             data: json,
             type: 'post',
             dataType: 'json',
