--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -3,14 +3,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Fit Layout</title>
+    <title>Employee</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link href="../demo.css" rel="stylesheet" type="text/css"/>
-
-
     <script src="../../scripts/boot.js" type="text/javascript"></script>
-
-
 </head>
 <body>
 <style type="text/css">
@@ -111,7 +107,7 @@
     function addRow() {
         var newRow = {};
         grid.addRow(newRow, 0);
-        grid.beginEditCell(newRow, "NAME");
+        grid.beginEditCell(newRow, "name");
     }
 
     function saveData() {
@@ -146,9 +142,9 @@
         });
     }
 
-    function onKeyEnter(e) {
-        onSearch();
-    }
+    //    function onKeyEnter(e) {
+    //        onSearch();
+    //    }
 
     function onFilterChanged() {
         var key = mini.get("nameFilter").getValue();
