--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -3,14 +3,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Fit Layout</title>
+    <title>Finance</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link href="../demo.css" rel="stylesheet" type="text/css"/>
-
-
     <script src="../../scripts/boot.js" type="text/javascript"></script>
-
-
 </head>
 <body>
 <style type="text/css">
@@ -112,14 +108,14 @@
     mini.parse();
     var grid = mini.get("datagrid1");
     var now = now();
-    alert(now)
+    // alert(now)
     grid.load({month: now});
 
     mini.get('combo1').setValue(now);
 
     function onMonthChange() {
         var value = mini.get('combo1').getValue();
-        alert(value);
+        // alert(value);
         grid.load({month: value});
     }
 
@@ -153,7 +149,7 @@
         var month = mini.get('combo1').getValue();
         var data = {'finances': finances, 'month': month};
         var json = mini.encode(data);
-        alert(json);
+        // alert(json);
         grid.loading("保存中，请稍后......");
         $.ajax({
             url: 'http://localhost:8080/ws/employee/v1/finances',
