--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -3,12 +3,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Fit Layout</title>
+    <title>Project Commission</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link href="../demo.css" rel="stylesheet" type="text/css"/>
     <script src="../../scripts/boot.js" type="text/javascript"></script>
-
-
 </head>
 <body>
 <style type="text/css">
@@ -144,7 +142,7 @@
     function saveData() {
         var data = grid.getChanges();
         var json = mini.encode(data);
-        alert(json);
+//        alert(json);
         grid.loading("保存中，请稍后......");
         $.ajax({
             url: 'http://localhost:8080/ws/commission/v1/projectCommissions',
